# Blokus

./: .gitignore  README.md  blokus.sh  debug_move_test.py  player_architecture_proposal.py  players_manager_proposal.py  state_machines_proposal.py  test_fix.py  test_frontend.py
blokus-engine/: .coverage  README.md  pyproject.toml  tests_report.md  training_queue.json
blokus-engine/models/: registry.json
blokus-engine/models/deployed/: README.md
blokus-engine/models/experiments/duo_gpu_2h_run_v1_20260104_201421/: metadata.json  metrics.csv
blokus-engine/scripts/: export_model.py  plot_metrics.py  profile_env.py  recover_plots_manual.sh  train.py  validate_env.py  verify_registry.py
blokus-engine/src/blokus/: __init__.py  board.py  game.py  game_manager.py  game_manager_factory.py  pieces.py  player.py  player_factory.py  player_types.py  rules.py
blokus-engine/src/blokus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
blokus-engine/tests/: test_4_ai_players.py  test_ai_system.py  test_board.py  test_corner_cases.py  test_duo_mode.py  test_game.py  test_game_manager.py  test_game_manager_factory.py  test_game_modes_comprehensive.py  test_mixed_modes.py  test_pieces.py  test_player.py  test_player_factory.py  test_player_types.py  test_property_based.py  test_regression_oriented.py  test_rules.py  test_server_integration.py  test_standard_2p_mode.py
blokus-engine/tests/integration/: test_api_settings.py
blokus-engine/tests/rl/: __init__.py  test_environment.py  test_networks.py  test_obs_validity.py  test_registry.py
blokus-server/: main.py  mappers.py  (+1 more)
(+197 files in other folders)
